--- a/src/buttons.html
+++ b/src/buttons.html
@@ -12,12 +12,12 @@
 
         <!-- Primary Button -->
         <button class="primary-btn primary primary-bg px-5 py-2 font-semibold rounded">
-            Button
+            Primary Button
         </button>
 
         <!-- Primary Button Blinking Button -->
         <button class="primary-btn primary primary-bg px-5 py-2 font-semibold rounded animation-blink">
-            Button
+            Blinking Button
         </button>
     </div>
 </body>
