--- a/src/buttons.html
+++ b/src/buttons.html
@@ -19,6 +19,25 @@
         <button class="primary-btn primary primary-bg px-5 py-2 font-semibold rounded animation-blink">
             Blinking Button
         </button>
+
+        <!-- Button with Icon -->
+        <!-- SVG REFERANCE -->
+        <!-- https://fonts.google.com/icons?icon.size=24&icon.color=%23e8eaed -->
+        <button class="primary-btn primary primary-bg px-5 py-2 font-semibold rounded flex gap-1 justify-center items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--primary-text)"><path d="M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160Zm320-300Zm0 420q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-280h320v-280q0-66-47-113t-113-47q-66 0-113 47t-47 113v280Z"/></svg>
+            Blinking Button
+        </button>
+
+        <!-- Notification Dot Button -->
+        <div class="w-auto h-auto flex">
+            <button class="primary-border secondary-btn secondary px-5 py-2 font-semibold rounded border-2">
+                Notification
+            </button>
+            <span class="relative flex h-3 w-3 -top-1 right-2">
+                <span class="animate-ping absolute inline-flex h-full w-full rounded-full primary-bg opacity-75"></span>
+                <span class="relative inline-flex rounded-full h-3 w-3 primary-bg"></span>
+            </span>
+        </div>
     </div>
 </body>
 </html>
