--- a/src/buttons.html
+++ b/src/buttons.html
@@ -25,7 +25,7 @@
         <!-- https://fonts.google.com/icons?icon.size=24&icon.color=%23e8eaed -->
         <button class="primary-btn primary primary-bg px-5 py-2 font-semibold rounded flex gap-1 justify-center items-center">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--primary-text)"><path d="M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160Zm320-300Zm0 420q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-280h320v-280q0-66-47-113t-113-47q-66 0-113 47t-47 113v280Z"/></svg>
-            Blinking Button
+            Notification
         </button>
 
         <!-- Notification Dot Button -->
@@ -38,6 +38,16 @@
                 <span class="relative inline-flex rounded-full h-3 w-3 primary-bg"></span>
             </span>
         </div>
+
+        <!-- Circle Button -->
+         <button class="primary-btn primary primary-bg w-10 h-10 font-bold" style="border-radius: 100%;">
+            X
+         </button>
+
+         <!-- Transperent Button -->
+          <button class="bg-gray-200 p-2 rounded-full"> 
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000"><path d="M479.9-111.52q-153.49 0-260.93-107.45Q111.52-326.41 111.52-479.9t107.47-261.32Q326.47-849.04 480-849.04q12.3 0 24.67.71 12.37.72 24.24 2.72-34.21 31.26-55.04 74.65t-20.83 92.87q0 94.01 66.14 159.81 66.13 65.8 160.6 65.8 49.35 0 92.52-20.54 43.18-20.55 73.87-54.76 1.44 11.87 2.16 23.51.71 11.63.71 23.7 0 153.4-107.82 261.22Q633.39-111.52 479.9-111.52Zm.1-106q73.3 0 134.26-37.2 60.96-37.19 93.52-98.8-14.35 2.74-28.69 4.04-14.35 1.31-28.13.18-120.74-9.61-205.83-93.29-85.09-83.67-95.83-208.93-.56-13.78.46-28.13t4.33-28.13q-61.05 33.13-98.81 94.09-37.76 60.95-37.76 133.69 0 108.74 76.87 185.61 76.87 76.87 185.61 76.87Zm-17.35-245.13Z"/></svg>
+          </button>
     </div>
 </body>
 </html>
