Added New Button

--- a/src/buttons.html
+++ b/src/buttons.html
@@ -35,6 +35,11 @@
             Notification
         </button>
 
+        <!-- Hollow Button -->
+        <button class="primary-border secondary-btn secondary px-5 py-2 font-semibold rounded border-2">
+            Notification
+        </button>
+
         <!-- Notification Dot Button -->
         <div class="w-auto h-auto flex">
             <button class="primary-border secondary-btn secondary px-5 py-2 font-semibold rounded border-2">
@@ -85,7 +90,7 @@
             </button>
         </div>
 
-    
+        <!-- Tooltip Button -->
         <div class="relative flex group">
             <button class="flex items-center primary-btn primary primary-bg font-semibold rounded justify-center px-5 py-2">
                 Tooltip Button
