Added New Buttons

--- a/src/buttons.html
+++ b/src/buttons.html
@@ -163,19 +163,75 @@
             </button>
         </div>
 
-
-        <div class="flex items-center justify-center h-screen">
+        <!-- On of Button -->
+        <div class="flex items-center justify-center">
             <!-- Hidden Checkbox -->
             <input type="checkbox" id="toggle" class="peer hidden" />
 
             <!-- Toggle Button -->
             <label for="toggle"
                 class="cursor-pointer success-btn success success-bg px-5 py-2 font-semibold rounded transition-colors duration-300 peer-checked:bg-red-500 before:content-['OFF'] peer-checked:before:content-['ON']">
-                
             </label>
         </div>
 
+        <!-- Toggle Button -->
+        <div class="relative items-center justify-center">
+            <!-- Hidden Checkbox (peer) -->
+            <input type="checkbox" id="checkboxInput" class="peer hidden" />
 
+            <!-- Toggle Switch -->
+            <label for="checkboxInput"
+                class="relative inline-block w-16 h-8 bg-gray-600 rounded-full cursor-pointer transition duration-300 peer-checked:bg-green-600">
+            </label>
+
+            <!-- Dot -->
+            <span
+                class="absolute top-1 left-1 w-6 h-6 p-1 bg-white rounded-full shadow-md transition-all duration-300 transform peer-checked:translate-x-8 flex justify-center text-xs">
+            </span>
+        </div>
+
+        <!-- Toggle Button -->
+        <div class="relative items-center justify-center">
+            <!-- Hidden Checkbox (peer) -->
+            <input type="checkbox" id="checkboxInput3" class="peer hidden" />
+
+            <!-- Toggle Switch -->
+            <label for="checkboxInput3"
+                class="relative inline-block w-16 h-8 bg-gray-600 rounded-full cursor-pointer transition duration-300 peer-checked:bg-green-600">
+            </label>
+
+            <!-- Dot -->
+            <span style="font-size: 0.6rem;"
+                class="absolute top-1 left-1 w-6 h-6 p-1 bg-white rounded-full shadow-md transition-all duration-300 transform peer-checked:translate-x-8 flex justify-center before:content-['ON'] peer-checked:before:content-['OFF']">
+            </span>
+        </div>
+
+        <!-- Toggle Button with icon -->
+        <div class="relative items-center justify-center">
+            <!-- Hidden Checkbox (peer) -->
+            <input type="checkbox" id="checkboxInput2" class="peer hidden" />
+
+            <!-- Toggle Switch -->
+            <label for="checkboxInput2"
+                class="relative inline-block w-16 h-8 bg-gray-600 rounded-full cursor-pointer transition duration-300 peer-checked:bg-green-600">
+            </label>
+
+            <!-- Dot -->
+            <span
+                class="absolute top-1 left-1 w-6 h-6 p-1 bg-white rounded-full shadow-md transition-all duration-200 transform peer-checked:translate-x-8 flex justify-center peer-checked:opacity-0 items-center">
+
+                <svg class="" xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="black"><path d="M480-360q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm-.23 72Q400-288 344-344.23q-56-56.22-56-136Q288-560 344.23-616q56.22-56 136-56Q560-672 616-615.77q56 56.22 56 136Q672-400 615.77-344q-56.22 56-136 56ZM216-444H48v-72h168v72Zm696 0H744v-72h168v72ZM444-744v-168h72v168h-72Zm0 696v-168h72v168h-72ZM269-642 166-742l51-55 102 104-50 51Zm474 475L642-268l49-51 103 101-51 51ZM640-691l102-101 51 49-100 103-53-51ZM163-217l105-99 49 47-98 104-56-52Zm317-263Z"/></svg>
+
+            </span>
+
+            <span
+                class="absolute top-1 left-1 w-6 h-6 p-1 bg-white hidden rounded-full shadow-md transition-all duration-100 transform translate-x-8 justify-center text-xs peer-checked:flex items-center">
+
+
+                <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="black"><path d="M479.96-144Q340-144 242-242t-98-238q0-140 97.93-238t237.83-98q13.06 0 25.65 1 12.59 1 25.59 3-39 29-62 72t-23 92q0 85 58.5 143.5T648-446q49 0 92-23t72-62q2 13 3 25.59t1 25.65q0 139.9-98.04 237.83t-238 97.93Zm.04-72q82 0 148.78-47.07Q695.55-310.15 727-386q-20 5-39.67 8.5Q667.67-374 648-374q-113.86 0-193.93-80.07Q374-534.14 374-648q0-19.67 3.5-39.33Q381-707 386-727q-75.85 31.45-122.93 98.22Q216-562 216-480q0 110 77 187t187 77Zm-14-250Z"/></svg>
+
+            </span>
+        </div>
 
 
 
