--- a/src/buttons.html
+++ b/src/buttons.html
@@ -4,23 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Buttons</title>
     <link rel="stylesheet" href="./output.css">
     <link rel="stylesheet" href="./root.css">
-    <style>
-        .perspective {
-            perspective: 1000px;
-        }
-
-        .backface-hidden {
-            backface-visibility: hidden;
-        }
-
-        .rotate-y-180 {
-            transform: rotateY(180deg);
-        }
-    </style>
-
 </head>
 
 <body>
