--- a/src/forms.html
+++ b/src/forms.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="flex flex-col justify-center items-center h-screen m-10">
+    <div class="flex flex-col justify-center items-center h-screen m-10 gap-10">
 
         <!-- Basic Input Field  -->
         <div class="username flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input">
@@ -22,6 +22,20 @@
             <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder w-11/12 text-sm" type="text"
                 placeholder="Enter Username Here">
         </div>
+
+        <!-- Basic Password Field  -->
+        <div class="username flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input">
+            <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="24px"
+                fill="var(--basic-input-placeholder)">
+                <path d="M252.31-100q-29.92 0-51.12-21.19Q180-142.39 180-172.31v-375.38q0-29.92 21.19-51.12Q222.39-620 252.31-620H300v-80q0-74.92 52.54-127.46Q405.08-880 480-880q74.92 0 127.46 52.54Q660-774.92 660-700v80h47.69q29.92 0 51.12 21.19Q780-577.61 780-547.69v375.38q0 29.92-21.19 51.12Q737.61-100 707.69-100H252.31Zm0-60h455.38q5.39 0 8.85-3.46t3.46-8.85v-375.38q0-5.39-3.46-8.85t-8.85-3.46H252.31q-5.39 0-8.85 3.46t-3.46 8.85v375.38q0 5.39 3.46 8.85t8.85 3.46ZM480-290q29.15 0 49.58-20.42Q550-330.85 550-360t-20.42-49.58Q509.15-430 480-430t-49.58 20.42Q410-389.15 410-360t20.42 49.58Q450.85-290 480-290ZM360-620h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80ZM240-160v-400 400Z"/>
+            </svg>
+
+
+            <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder w-11/12 text-sm" type="password"
+                placeholder="Enter Password Here">
+        </div>
+
+
     </div>
 
 
