--- a/src/forms.html
+++ b/src/forms.html
@@ -13,41 +13,70 @@
     <div class="flex flex-col justify-center items-center h-screen m-10 gap-10">
 
         <!-- Basic Input Field  -->
-        <div class="username flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input">
+        <div class="flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="var(--basic-input-placeholder)">
                 <path
                     d="M480-492.31q-57.75 0-98.87-41.12Q340-574.56 340-632.31q0-57.75 41.13-98.87 41.12-41.13 98.87-41.13 57.75 0 98.87 41.13Q620-690.06 620-632.31q0 57.75-41.13 98.88-41.12 41.12-98.87 41.12ZM180-187.69v-88.93q0-29.38 15.96-54.42 15.96-25.04 42.66-38.5 59.3-29.07 119.65-43.61 60.35-14.54 121.73-14.54t121.73 14.54q60.35 14.54 119.65 43.61 26.7 13.46 42.66 38.5Q780-306 780-276.62v88.93H180Zm60-60h480v-28.93q0-12.15-7.04-22.5-7.04-10.34-19.11-16.88-51.7-25.46-105.42-38.58Q534.7-367.69 480-367.69q-54.7 0-108.43 13.11-53.72 13.12-105.42 38.58-12.07 6.54-19.11 16.88-7.04 10.35-7.04 22.5v28.93Zm240-304.62q33 0 56.5-23.5t23.5-56.5q0-33-23.5-56.5t-56.5-23.5q-33 0-56.5 23.5t-23.5 56.5q0 33 23.5 56.5t56.5 23.5Zm0-80Zm0 384.62Z" />
             </svg>
-            <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder w-11/12 text-sm" type="text"
-                placeholder="Enter Username Here">
+            <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder w-11/12 text-sm"
+                type="text" placeholder="Enter Username Here">
         </div>
 
         <!-- Basic Password Field  -->
-        <div class="username flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input">
+        <div class="flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input">
             <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="24px"
                 fill="var(--basic-input-placeholder)">
-                <path d="M252.31-100q-29.92 0-51.12-21.19Q180-142.39 180-172.31v-375.38q0-29.92 21.19-51.12Q222.39-620 252.31-620H300v-80q0-74.92 52.54-127.46Q405.08-880 480-880q74.92 0 127.46 52.54Q660-774.92 660-700v80h47.69q29.92 0 51.12 21.19Q780-577.61 780-547.69v375.38q0 29.92-21.19 51.12Q737.61-100 707.69-100H252.31Zm0-60h455.38q5.39 0 8.85-3.46t3.46-8.85v-375.38q0-5.39-3.46-8.85t-8.85-3.46H252.31q-5.39 0-8.85 3.46t-3.46 8.85v375.38q0 5.39 3.46 8.85t8.85 3.46ZM480-290q29.15 0 49.58-20.42Q550-330.85 550-360t-20.42-49.58Q509.15-430 480-430t-49.58 20.42Q410-389.15 410-360t20.42 49.58Q450.85-290 480-290ZM360-620h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80ZM240-160v-400 400Z"/>
+                <path
+                    d="M252.31-100q-29.92 0-51.12-21.19Q180-142.39 180-172.31v-375.38q0-29.92 21.19-51.12Q222.39-620 252.31-620H300v-80q0-74.92 52.54-127.46Q405.08-880 480-880q74.92 0 127.46 52.54Q660-774.92 660-700v80h47.69q29.92 0 51.12 21.19Q780-577.61 780-547.69v375.38q0 29.92-21.19 51.12Q737.61-100 707.69-100H252.31Zm0-60h455.38q5.39 0 8.85-3.46t3.46-8.85v-375.38q0-5.39-3.46-8.85t-8.85-3.46H252.31q-5.39 0-8.85 3.46t-3.46 8.85v375.38q0 5.39 3.46 8.85t8.85 3.46ZM480-290q29.15 0 49.58-20.42Q550-330.85 550-360t-20.42-49.58Q509.15-430 480-430t-49.58 20.42Q410-389.15 410-360t20.42 49.58Q450.85-290 480-290ZM360-620h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80ZM240-160v-400 400Z" />
             </svg>
 
-            <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder w-11/12 text-sm" type="password"
-                placeholder="Enter Password Here">
+            <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder w-11/12 text-sm"
+                type="password" placeholder="Enter Password Here">
         </div>
 
         <!-- Basic Password Field - TEXT TYPE -->
-        <div class="username flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input">
+        <div class="flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input">
             <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="24px"
                 fill="var(--basic-input-placeholder)">
-                <path d="M252.31-620H600v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85h-60q0-74.92 52.54-127.46Q405.08-880 480-880q74.92 0 127.46 52.54Q660-774.92 660-700v80h47.69q29.92 0 51.12 21.19Q780-577.61 780-547.69v375.38q0 29.92-21.19 51.12Q737.61-100 707.69-100H252.31q-29.92 0-51.12-21.19Q180-142.39 180-172.31v-375.38q0-29.92 21.19-51.12Q222.39-620 252.31-620Zm0 460h455.38q5.39 0 8.85-3.46t3.46-8.85v-375.38q0-5.39-3.46-8.85t-8.85-3.46H252.31q-5.39 0-8.85 3.46t-3.46 8.85v375.38q0 5.39 3.46 8.85t8.85 3.46ZM480-290q29.15 0 49.58-20.42Q550-330.85 550-360t-20.42-49.58Q509.15-430 480-430t-49.58 20.42Q410-389.15 410-360t20.42 49.58Q450.85-290 480-290ZM240-160v-400 400Z"/>
+                <path
+                    d="M252.31-620H600v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85h-60q0-74.92 52.54-127.46Q405.08-880 480-880q74.92 0 127.46 52.54Q660-774.92 660-700v80h47.69q29.92 0 51.12 21.19Q780-577.61 780-547.69v375.38q0 29.92-21.19 51.12Q737.61-100 707.69-100H252.31q-29.92 0-51.12-21.19Q180-142.39 180-172.31v-375.38q0-29.92 21.19-51.12Q222.39-620 252.31-620Zm0 460h455.38q5.39 0 8.85-3.46t3.46-8.85v-375.38q0-5.39-3.46-8.85t-8.85-3.46H252.31q-5.39 0-8.85 3.46t-3.46 8.85v375.38q0 5.39 3.46 8.85t8.85 3.46ZM480-290q29.15 0 49.58-20.42Q550-330.85 550-360t-20.42-49.58Q509.15-430 480-430t-49.58 20.42Q410-389.15 410-360t20.42 49.58Q450.85-290 480-290ZM240-160v-400 400Z" />
             </svg>
-            <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder w-11/12 text-sm" type="text"
-                placeholder="Enter Password Here">
+            <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder w-11/12 text-sm"
+                type="text" placeholder="Enter Password Here">
         </div>
 
+        <!-- Basic Dropdown Field  -->
+        <div class="relative inline-block w-56 basic-input rounded-md">
+            <!-- Trigger -->
+            <button
+                class="w-full text-left px-4 py-2 bg-transparent rounded-md focus:outline-none"
+                onclick="toggleDropdown()">
+                <span id="dropdownLabel" class="text-sm basic-input-placeholder">Select an option</span>
+                <svg xmlns="http://www.w3.org/2000/svg" id="basic-dropdown-icon" class="h-5 w-5 float-right basic-input-placeholder transition-all duration-150 ease-out" fill="none"
+                    viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                </svg>
+            </button>
+
+            <!-- Dropdown menu -->
+            <ul id="dropdownMenu"
+                class="absolute left-0 z-10 w-full basic-input-placeholder rounded-md shadow-md hidden">
+                <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-sm" onclick="selectOption('Data 1')">
+                    Data 1
+                </li>
+                <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-sm" onclick="selectOption('Data 2')">
+                    Data 2
+                </li>
+                <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-sm" onclick="selectOption('Data 3')">
+                    Data 3
+                </li>
+            </ul>
+        </div>
 
     </div>
 
 
 </body>
-
+<script src="./js/functions.js"></script>
 </html>
