Added New Fields

--- a/src/forms.html
+++ b/src/forms.html
@@ -10,9 +10,16 @@
 </head>
 
 <body>
-    <div class="flex flex-col justify-center items-center h-screen m-10 gap-10">
+    <div class="flex justify-center h-screen flex-wrap items-center gap-4">
 
         <!-- Basic Input Field  -->
+        <div class="flex bg4 p-3 mx-2 gap-2 rounded-md basic-input">
+            <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder text-sm"
+                type="text" placeholder="Basic Input Field">
+        </div>
+
+
+        <!-- Basic Input Field with icon  -->
         <div class="flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="var(--basic-input-placeholder)">
@@ -46,6 +53,29 @@
                 type="text" placeholder="Enter Password Here">
         </div>
 
+        <!-- Advance Password Field -->
+        <div class="flex bg4 p-3 mx-2 w-auto gap-2 rounded-md basic-input items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="24px"
+                fill="var(--basic-input-placeholder)">
+                <path d="M429.62-370h100.76l-22.61-126.31q18.84-8.08 30.34-25.34 11.5-17.27 11.5-38.35 0-28.77-20.42-49.19-20.42-20.42-49.19-20.42-28.77 0-49.19 20.42-20.42 20.42-20.42 49.19 0 21.08 11.5 38.35 11.5 17.26 30.34 25.34L429.62-370ZM480-100.77q-129.77-35.39-214.88-152.77Q180-370.92 180-516v-230.15l300-112.31 300 112.31V-516q0 145.08-85.12 262.46Q609.77-136.16 480-100.77Zm0-63.23q104-33 172-132t68-220v-189l-240-89.62L240-705v189q0 121 68 220t172 132Zm0-315.62Z"/>
+            </svg>
+            <input class="before:border-0 focus:outline-none bg-transparent basic-input-placeholder w-auto text-sm"
+                type="password" id="password-field" placeholder="Enter Password Here">
+            
+            <!-- eye icon -->
+            <svg class="mr-2 cursor-pointer" id="eye-open" onclick="togglePasswordField()" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 -960 960 960" width="24px"
+                fill="var(--basic-input-placeholder)">
+                <path d="M480.09-336.92q67.99 0 115.49-47.59t47.5-115.58q0-67.99-47.59-115.49t-115.58-47.5q-67.99 0-115.49 47.59t-47.5 115.58q0 67.99 47.59 115.49t115.58 47.5ZM480-392q-45 0-76.5-31.5T372-500q0-45 31.5-76.5T480-608q45 0 76.5 31.5T588-500q0 45-31.5 76.5T480-392Zm.05 172q-137.97 0-251.43-76.12Q115.16-372.23 61.54-500q53.62-127.77 167.02-203.88Q341.97-780 479.95-780q137.97 0 251.43 76.12Q844.84-627.77 898.46-500q-53.62 127.77-167.02 203.88Q618.03-220 480.05-220ZM480-500Zm0 220q113 0 207.5-59.5T832-500q-50-101-144.5-160.5T480-720q-113 0-207.5 59.5T128-500q50 101 144.5 160.5T480-280Z"/>
+            </svg>
+
+            <svg class="mr-2 cursor-pointer hidden" id="eye-close" onclick="togglePasswordField()" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 -960 960 960" width="24px"
+                fill="var(--basic-input-placeholder)">
+                <path d="M630.92-441.08 586-486q9-49.69-28.35-89.35Q520.31-615 466-606l-44.92-44.92q13.54-6.08 27.77-9.12 14.23-3.04 31.15-3.04 68.08 0 115.58 47.5T643.08-500q0 16.92-3.04 31.54-3.04 14.61-9.12 27.38Zm127.23 124.46L714-358q38-29 67.5-63.5T832-500q-50-101-143.5-160.5T480-720q-29 0-57 4t-55 12l-46.61-46.61q37.92-15.08 77.46-22.23Q438.39-780 480-780q140.61 0 253.61 77.54T898.46-500q-22.23 53.61-57.42 100.08-35.2 46.46-82.89 83.3Zm32.31 231.39L628.62-245.85q-30.77 11.39-68.2 18.62Q523-220 480-220q-141 0-253.61-77.54Q113.77-375.08 61.54-500q22.15-53 57.23-98.88 35.08-45.89 77.23-79.58l-110.77-112 42.16-42.15 705.22 705.22-42.15 42.16Zm-552.3-551.08q-31.7 25.23-61.66 60.66Q146.54-540.23 128-500q50 101 143.5 160.5T480-280q27.31 0 54.39-4.62 27.07-4.61 45.92-9.53L529.69-346q-10.23 4.15-23.69 6.61-13.46 2.47-26 2.47-68.08 0-115.58-47.5T316.92-500q0-12.15 2.47-25.42 2.46-13.27 6.61-24.27l-87.84-86.62ZM541-531Zm-131.77 65.77Z"/>
+            </svg>
+
+        </div>
+
+
         <!-- Basic Dropdown Field  -->
         <div class="relative inline-block w-56 basic-input rounded-md">
             <!-- Trigger -->
@@ -73,10 +103,11 @@
                 </li>
             </ul>
         </div>
+        
 
     </div>
 
 
+    <script src="./js/functions.js"></script>
 </body>
-<script src="./js/functions.js"></script>
 </html>
