Adding New Button

--- a/src/buttons.html
+++ b/src/buttons.html
@@ -220,6 +220,10 @@
         </div>
 
 
+         <!-- Button With Image -->
+         <button class="primary-btn primary primary-bg w-10 h-10 font-bold" style="border-radius: 100%;">
+            X
+        </button>
 
 
 
