Added New Button

--- a/src/buttons.html
+++ b/src/buttons.html
@@ -221,11 +221,8 @@
 
 
          <!-- Button With Image -->
-         <button class="primary-btn primary primary-bg w-10 h-10 font-bold" style="border-radius: 100%;">
-            X
+         <button class="primary image-btn primary-bg w-14 h-14 font-bold rounded-full">
         </button>
-
-
 
     </div>
 </body>
