Added New Button

--- a/src/buttons.html
+++ b/src/buttons.html
@@ -224,6 +224,27 @@
          <button class="primary image-btn primary-bg w-14 h-14 font-bold rounded-full">
         </button>
 
+
+
+        <!-- Plus Minus Button Toggle -->
+         <div class="bg-slate-200 border border-slate-500 w-24 h-12 flex rounded-xl overflow-hidden cursor-pointer">
+
+            <div class="text-white flex justify-center items-center w-8 bg-slate-800">
+                +
+            </div>
+
+            <div class="text-black flex justify-center items-center w-8">
+                <span>
+                    1
+                </span>
+            </div>
+
+            <div class="text-white flex justify-center items-center w-8 bg-slate-800">
+                -
+            </div>
+
+         </div>
+
     </div>
 </body>
 
